[package]
name = "hold-my-place"
version = "0.1.0"
edition = "2021"
authors = ["Erik Vroon"]
publish = false

[dependencies]
axum = "0.7.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ab_glyph = "0.2.29"
image = { version = "0.25.2" }
imageproc = "0.25.0"
csscolorparser = "0.7.0"
svg = "0.18.0"
rusttype = "0.9.3"
tower-http = { version = "0.6.1", features = ["fs"] }
