[package]
name = "hold-my-place"
version = "0.1.0"
edition = "2021"
authors = ["Erik Vroon"]
publish = false

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ab_glyph = "0.2.32"
image = { version = "0.25.9" }
imageproc = "0.25.0"
csscolorparser = "0.8.0"
svg = "0.18.0"
rusttype = "0.9.3"
tower-http = { version = "0.6.7", features = ["fs"] }
